<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="@bool/key_permission_modify_system_settings_default_value"
        android:key="@string/key_permission_modify_system_settings"
        android:summaryOff="@string/settings_permission_modify_system_settings_summary_off"
        android:summaryOn="@string/settings_permission_modify_system_settings_summary_on"
        android:title="@string/settings_permission_modify_system_settings_title" />

    <Preference
        android:summary="@string/settings_github_link"
        android:title="@string/source_code">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/settings_github_link" />

    </Preference>
</PreferenceScreen>